# python-template

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/: .flake8  .pre-commit-config.yaml  README.md  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/docs_sources/mkdocs/: index.md  mkdocs.yml
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/src/{{ cookiecutter.project_slug }}/: __init__.py  manage.py
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/tests/: test_manage.py
