[tool.poetry]
name = "{{ cookiecutter.project_name|lower|replace(' ', '-') }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "{{ cookiecutter.domain_name }}"
documentation = ""
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name|lower|replace(' ', '-')|replace('_', '-') }}/"
keywords = ["{{ cookiecutter.project_slug }}"]
include = [
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = "^2.0", python = "<3.8"}
{% if cookiecutter.use_typer_for_CLI == 'yes' -%}typer = {extras = ["all"], version = "^0.3.2"}{%- endif %}
{% if cookiecutter.use_typer_for_CLI == 'yes' -%}rich = "^9.2.0"{%- endif %}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
codecov = "^2.1"
coverage = {extras = ["toml"], version = "^5.3"}
darglint = "^1.5"
flake8 = "^3.8"
flake8-annotations = "^2.4"
flake8-bandit = "^2.1"
flake8-black = "^0.2"
flake8-bugbear = "^20.1"
flake8-docstrings = "^1.5"
flake8-import-order = "^0.18.1"
isort = {extras = ["pyproject"], version = "^5.6"}
mypy = "^0.790"
pytest = "^6.1"
pytest-cov = "^2.10"
pytype = {version = "^2020.11.12", python = "3.7"}
safety = "^1.9.0"
typeguard = "^2.10"
xdoctest = "^0.15"
radon = "^4.3"
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-material = "^6.1"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocstrings = "^0.13"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-minify-plugin = "^0.3"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-git-revision-date-localized-plugin = "^0.7"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-git-authors-plugin = "^0.3.2"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-macros-plugin = "^0.4.20"{%- endif %}

{% if cookiecutter.use_typer_for_CLI == 'yes' -%}
[tool.poetry.scripts]
{{ cookiecutter.project_name|lower|replace(' ', '-')|replace('_', '-') }} = "{{ cookiecutter.project_slug }}.manage:app"
{%- endif %}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.isort]
profile="black"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
